style: fix SortBy z-index on mobile devices

--- a/src/components/FeedbackHub/SortBy/SortBy.module.scss
+++ b/src/components/FeedbackHub/SortBy/SortBy.module.scss
@@ -87,6 +87,7 @@
 
 @media (width <= var.$breakpoint-762) {
   .container {
+    z-index: 100;
     top: 4.875rem;
     position: sticky;
     border-radius: initial;
